feat(backend): Add binary file upload. (#41)
